# IZ1-C

./: CMakeLists.txt  README.md  main.c
.github/workflows/: CI.yml
GoogleTest/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt
src/air_ticket/: CMakeLists.txt  air_ticket.c  air_ticket.h
src/input/: CMakeLists.txt  input.c  input.h
src/search/: CMakeLists.txt  search.c  search.h
